chore: Include README.md and LICENSE in package files array.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "files": [
     "dist",
     "AGENTS.md",
-    ".opencode"
+    ".opencode",
+    "README.md",
+    "LICENSE"
   ],
   "scripts": {
     "build": "tsc",
